Fixing the alignment of second card

--- a/src/app/dash/dash.component.scss
+++ b/src/app/dash/dash.component.scss
@@ -2,6 +2,11 @@
   margin: 20px;
 }
 
+.card-container {
+  display: flex;
+  gap: 10px;
+}
+
 .dashboard-card {
   position: absolute;
   display: flex;
